apps/playground/nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-ephemeral
      - name: cron
        image: nextcloud:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "while true; do php -f cron.php; sleep 300; done"]
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-ephemeral
        securityContext:
          runAsUser: 33
      volumes:
      - name: nextcloud-ephemeral
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0
spec:
  ingressClassName: nginx
  rules:
  - host: nextcloud.home
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: nextcloud
            port:
              number: 80
